argocd-resources/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-application-set
  namespace: argocd
spec:
  ingressClassName: nginx
  rules:
  - host: "*.share.zrok.io"
    http:
      paths:
      - backend:
          service:
            name: argocd-applicationset-controller
            port:
              number: 7000
        path: /api/webhook
        pathType: Prefix
